# project-management

./: Dockerfile  README.md  alembic.ini  migration.sh  praca.docx  pyproject.toml  requirements.txt  start.sh
front/: index.html  nx.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.spec.json  vite.config.ts
front/src/: main.tsx  styles.css
front/src/app/: app.module.css  app.tsx
front/src/app/login/: login.module.css  login.tsx
front/src/app/navbar/: navbar.module.css  navbar.tsx
front/src/app/register/: register.module.css  register.tsx
front/src/app/users/: users.tsx
front/src/app/worker/: worker.module.css  worker.spec.tsx  worker.tsx
front/src/app/workers/: workers.module.css  workers.tsx
front/src/services/: auth.ts
migrations/: env.py
migrations/versions/: 0359b9cb2818_changes_to_user_and_worker.py  2fcbebce5f09_added_nullable.py  8ffdb49ed294_initial.py  b859d10dc370_added_nullable_for_fks.py  f8b97e26ff30_changes_to_user_and_worker.py
src/project_managment/: container.py  db.py  main.py
src/project_managment/dependencies/: auth.py  project.py  skill.py  user.py  worker.py
src/project_managment/models/domain/: association.py  project.py  skill.py  user.py  worker.py
src/project_managment/models/schemas/: project.py  skill.py  user.py  worker.py
src/project_managment/routes/: project.py  skill.py  user.py  worker.py
src/project_managment/services/: auth.py  project.py  skill.py  user.py  worker.py
tests/: test_projects.py  test_skill.py  test_users.py  test_workers.py
