[project]
name = "project_managment"
version = "0.1.0"
description = "Simple project management system"
authors = [
    {name = "Mateusz Zwierzyński", email = "mateusz.zwierzynski@hotmail.com"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "dependency-injector>=4.41.0",
    "sqlalchemy>=2.0.29",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
